<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_heading"
                android:textColor="@color/white"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_design"
                android:padding="15dp"
                android:hint="@string/email_hint" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_design"
                android:padding="15dp"
                android:hint="@string/password_hint" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login_button_text"
                android:background="@drawable/button_design"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or_text"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/register_button_text"
                android:background="@drawable/button_design"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textAppearance="@android:style/TextAppearance.Medium" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>